# pulse-test

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  Feedback v1.docx  PROJECT_CONTEXT.MD  docker-compose.yml  ngrok.yml
.cloudflared/: config.frontend.example.yml
backend/: .dockerignore  Dockerfile  build.gradle.kts  settings.gradle.kts
backend/src/main/resources/runtime-helpers/pulse_dates/: __init__.py  pyproject.toml
backend/src/main/resources/runtime-helpers/pulse_dates/tests/: test_pulse_dates.py
benchmark/: README.md
data/: generate_loan_master.py  loan_master.csv
docker/: spark-defaults.conf
docs/: AUTONOMOUS-BUILD-AUDIT-REMEDIATION-PLAN-2026-06-17.md  CODE-MAP.md  DOC-AUDIT-REVIEW-2026-06-15.md  HANDOFF-AUTONOMOUS-BUILD.md  PULSE-MAP.md  SPEC-DISCIPLINE.md  UI_UX_NORTH_STAR_PLAN.md  server-startup.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
ocp/: ENV_CHECKLIST.md  README.md
scripts/: README.md  authenticate-cgdev2.sh  authenticate_dev2.sh  backend_test_profile.py  cg-provision-sa-email.md  cg-provision-sa.txt  cloudflare-delete-route.sh  cloudflare-frontend-tunnel.sh  cloudflare-stop-tunnel.sh  gcp-bootstrap-pulse3.sh  gcp-bootstrap-tenant-provisioner.sh  gcp-deploy-cgdev2.sh  gcp-deploy-dev2.sh  gcp-deploy-pulse3.sh  gcp-deploy.sh  gcp-start-cgdev2.sh  gcp-start-dev2.sh  gcp-start-pulse3.sh  gcp-start.sh  gcp-stop-cgdev2.sh  gcp-stop-dev2.sh  gcp-stop-pulse3.sh  gcp-stop.sh  monitor-chat-transcript.sh  start-backend.sh  start-firefox-web.sh  start-frontend.sh  (+1 more)
(+1719 files in other folders)
